--- a/elasticsearch/pom.xml
+++ b/elasticsearch/pom.xml
@@ -31,6 +31,11 @@
             <version>2.0.0</version>
         </dependency>
         <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging-annotations</artifactId>
         </dependency>
