--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
   artifacts:
     paths:
       - $(find $HOME -name surefire-reports | tr "\n" ":")
+      - $(find $HOME -name failsafe-reports | tr "\n" ":")
     debug: true
   s3_region: 'us-west-2'
 cache:
