--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: java
 jdk:
   - oraclejdk8
 addons:
-  postgresql: '9.4'
-  mariadb: '10.0'
+  #postgresql: '9.4'
+  #mariadb: '10.0'
   apt:
     packages:
       - oracle-java8-installer
@@ -23,6 +23,7 @@ env:
 #  - DB=pgsql
 #  - DB=mariadb
 install:
+  - ulimit -a
   - mvn -v
   # first run to download all the Maven dependencies without logging
   - mvn -B -q clean install -DskipTests=true
