--- a/.travis.yml
+++ b/.travis.yml
@@ -26,14 +26,14 @@ install:
   - ulimit -a
   - mvn -v
   # first run to download all the Maven dependencies without logging
-  - mvn -B -q clean install -DskipTests=true
+  - mvn -s settings-example.xml -B -q clean install -DskipTests=true
   # we run checkstyle first to fail fast if there is a styling error
-  - mvn checkstyle:check
+  - mvn -s settings-example.xml checkstyle:check
 before_script: 
   - if [[ "$DB" == "pgsql" ]]; then psql -U postgres -f 'travis/pgsql.sql';fi 
   - if [[ "$DB" == "mariadb" ]]; then mysql -u root < 'travis/mariadb.sql'; fi
 script:
-  - if [[ "$DB" == "h2" ]]; then mvn -pl integrationtest/wildfly/ verify;fi 
+  - if [[ "$DB" == "h2" ]]; then mvn -s settings-example.xml verify;fi 
   - if [[ "$DB" == "pgsql" ]]; then mvn -s settings-example.xml -Pci-postgresql verify;fi 
   - if [[ "$DB" == "mariadb" ]]; then mvn -s settings-example.xml -Pci-mariadb verify; fi
   
