--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: required
+dist: trusty
 language: java
 jdk:
   - oraclejdk8
@@ -8,11 +10,11 @@ addons:
     packages:
       - oracle-java8-installer
 # might be useful to push reports to an S3 bucket
-  artifacts:
-    paths:
-      - $(find $HOME -name surefire-reports | tr "\n" ":")
-      - $(find $HOME -name failsafe-reports | tr "\n" ":")
-  s3_region: 'us-west-2'
+#  artifacts:
+#    paths:
+#      - $(find $HOME -name surefire-reports | tr "\n" ":")
+#      - $(find $HOME -name failsafe-reports | tr "\n" ":")
+#  s3_region: 'us-west-2'
 cache:
   directories:
     - $HOME/.m2
@@ -22,7 +24,6 @@ env:
 #  - DB=pgsql
 #  - DB=mariadb
 install:
-  - ulimit -a
   - mvn -v
   # first run to download all the Maven dependencies without logging
   - mvn -s settings-example.xml -B -q clean install -DskipTests=true
