--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,17 @@ env:
 #  - DB=pgsql
 #  - DB=mariadb
 install:
-  - mvn -v
+  - mvn -N io.takari:maven:wrapper
+  - ./mvnw -v
   # first run to download all the Maven dependencies without logging
-  - mvn -s settings-example.xml -B -q clean install -DskipTests=true
+  - ./mvnw -s settings-example.xml -B -q clean install -DskipTests=true
   # we run checkstyle first to fail fast if there is a styling error
-  - mvn -s settings-example.xml checkstyle:check
+  - ./mvnw -s settings-example.xml checkstyle:check
 before_script: 
   - if [[ "$DB" == "pgsql" ]]; then psql -U postgres -f 'travis/pgsql.sql';fi 
   - if [[ "$DB" == "mariadb" ]]; then mysql -u root < 'travis/mariadb.sql'; fi
 script:
-  - if [[ "$DB" == "h2" ]]; then mvn -s settings-example.xml verify;fi 
-  - if [[ "$DB" == "pgsql" ]]; then mvn -s settings-example.xml -Pci-postgresql verify;fi 
-  - if [[ "$DB" == "mariadb" ]]; then mvn -s settings-example.xml -Pci-mariadb verify; fi
+  - if [[ "$DB" == "h2" ]]; then ./mvnw -s settings-example.xml verify;fi 
+  - if [[ "$DB" == "pgsql" ]]; then ./mvnw -s settings-example.xml -Pci-postgresql verify;fi 
+  - if [[ "$DB" == "mariadb" ]]; then ./mvnw -s settings-example.xml -Pci-mariadb verify; fi
   
