--- a/pom.xml
+++ b/pom.xml
@@ -949,6 +949,7 @@
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.9.1</version>
                     <configuration>
+                        <quiet>true</quiet>
                         <!-- Fail on error alternative -->
                         <!-- <additionalparam>-Xdoclint:none</additionalparam> -->
                         <additionalDependencies>
